[package]
name = "rusty_gate"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
url = "2.1"
bytes = "1.0"
reqwest = { version = "0.11", features = ["json"] }
flate2 = "1.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }
warp = "0.3.7"
serde = { version = "1.0.168", features = ["derive"] }
serde_json = "1.0.96"
reqwest = { version = "0.11", features = ["json"] }
flate2 = "1.0.31"
bytes = "1.4.0"